# speex-1.2.1

speex-1.2.1/: CMakeLists.txt  config.h.cmake
speex-1.2.1/include/speex/: speex_types.h
speex-1.2.1/libspeex/: CMakeLists.txt
speex-1.2.1/win32/: config.h
speex-api-reference/: annotated.html  classSpeexEchoState.html  dir_99052cc45adeb0f11eb8154590403223.html  dir_a932ce0618432e55abc623179b4d9b9e.html  dir_bd839771868304f7558505e0a7a47ea7.html  dir_ee1c53f669465aecd40d9d56622e6c6c.html  dirs.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  group__Codec.html  group__JitterBuffer.html  group__SpeexBits.html  group__SpeexCallbacks.html  group__SpeexEchoState.html  group__SpeexHeader.html  group__SpeexJitter.html  group__SpeexPreprocessState.html  group__SpeexStereoState.html  index.html  modules.html  speex_8h-source.html  speex_8h.html  speex__bits_8h-source.html  speex__bits_8h.html  speex__callbacks_8h-source.html  speex__callbacks_8h.html  speex__echo_8h-source.html  speex__echo_8h.html  speex__header_8h-source.html  speex__header_8h.html  speex__jitter_8h-source.html  speex__jitter_8h.html  speex__preprocess_8h-source.html  speex__preprocess_8h.html  (+19 more)
speex_manual/: WARNINGS  footnode.html  images.aux  images.pl  images.tex  internals.pl  labels.pl  manual.css  manual.html  node1.html  node10.html  node11.html  node12.html  node13.html  node14.html  node15.html  node16.html  node17.html  node18.html  node2.html  node3.html  node4.html  node5.html  node6.html  node7.html  node8.html  node9.html
