CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
project(speex)
include(CheckIncludeFiles)
include(CheckSymbolExists)
include(CheckTypeSize)
set(SPEEX_MAJOR_VERSION 1)
set(SPEEX_MINOR_VERSION 2)
set(SPEEX_MICRO_VERSION 1)
set(SPEEX_EXTRA_VERSION "1")
set(SPEEX_VERSION "1.2.1")
set(SPEEX_INCLUDES)
macro(check_include_file_concat FILE VARIABLE)
    check_include_files("${SPEEX_INCLUDES};${FILE}" ${VARIABLE})
    if (${VARIABLE})
        set(SPEEX_INCLUDES ${SPEEX_INCLUDES} ${FILE})
    endif ()
endmacro()
if (WIN32)
    set(FLOATING_POINT 1)
else ()
    set(FIXED_POINT 1)
endif ()
check_include_file_concat("alloca.h" HAVE_ALLOCA_H)
check_include_file_concat("dlfcn.h" HAVE_DLFCN_H)
check_include_file_concat("getopt.h" HAVE_GETOPT_H)
check_include_file_concat("getopt.h" HAVE_GETOPT_H)
check_symbol_exists(getopt_long "${SPEEX_INCLUDES}" HAVE_GETOPT_LONG)
check_include_file_concat("inttypes.h" HAVE_INTTYPES_H)
check_include_file_concat("stdint.h" HAVE_STDINT_H)
check_include_file_concat("stdio.h" HAVE_STDIO_H)
check_include_file_concat("stdlib.h" HAVE_STDLIB_H)
check_include_file_concat("strings.h" HAVE_STRINGS_H)
check_include_file_concat("string.h" HAVE_STRING_H)
check_include_file_concat("sys/audioio.h" HAVE_SYS_AUDIOIO_H)
check_include_file_concat("sys/soundcard.h" HAVE_SYS_SOUNDCARD_H)
check_include_file_concat("sys/stat.h" HAVE_SYS_STAT_H)
check_include_file_concat("sys/types.h" HAVE_SYS_TYPES_H)
check_include_file_concat("unistd.h" HAVE_UNISTD_H)
check_type_size(int SIZEOF_INT)
check_type_size("long long" SIZEOF_INT32_T)
check_type_size("long" SIZEOF_LONG)
check_type_size("short" SIZEOF_SHORT)
check_type_size(int16_t SIZEOF_INT16_T)
check_type_size("uint16_t" SIZEOF_UINT16_T)
check_type_size("uint32_t" SIZEOF_UINT32_T)
set(EXPORT 1)
if (WIN32)
    configure_file(config.h.cmake
            ${CMAKE_CURRENT_BINARY_DIR}/config_win.h)
else ()
    configure_file(config.h.cmake
            ${CMAKE_CURRENT_BINARY_DIR}/config.h)
endif ()
option(BUILD_SHARED_LIBS "Build shared version libspeex" OFF)
add_subdirectory(libspeex)

#add_executable(speexdec src/speexdec.c)
#target_link_libraries(speexdec libspeex)

#add_executable(skeleton src/skeleton.c)
#target_link_libraries(skeleton libspeex)
